# QuanTechCapitalFastApi

./: .env  .gitignore  INSTALL.md  INTRODUCTION.md  Makefile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: de8e45603b00_init_user_table.py
app/: main.py  setting.py
app/api/api_auth/: auth_controller.py  auth_request.py  auth_response.py  auth_service.py
app/api/api_ea_mql5/: ea_mql5_controller.py  ea_mql5_request.py  ea_mql5_service.py
app/api/api_me/: me_controller.py
app/api/api_role/: role_controller.py
app/api/api_setting/: setting_controller.py  setting_request.py  setting_service.py
app/api/api_user/: api_user_controller.py  api_user_request.py  api_user_response.py  user_controller.py  user_request.py  user_service.py
app/api/api_user_role/: user_role_controller.py
app/api/service_common/: service_common.py
app/core/: app_queue.py  base_condition.py  camel_model.py  exception.py  logger.py  middleware.py
app/depends/: request_depends.py
app/module/: mt5_module.py  token_module.py
app/mongo/: mongo_condition.py  mongo_config.py  mongo_connection.py  mongo_model.py  mongo_repository.py
app/mongo/models/: ea_mql5_model.py  (+1 more)
app/postgres/: base_repository.py  postgres_condition.py  postgres_config.py  postgres_connection.py  postgres_entity.py  postgres_repository.py
app/redis/: redis_base.py  redis_config.py  redis_connection.py
app/schema/: get_query.py
app/socket/: socket_constants.py  socket_events.py  socket_server.py
app/utils/: time_util.py
app/worker/: mt5_status_job.py  worker.py
(+14 files in other folders)
