[project]
name = "quantechcapitalfastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt<4.0",
    "fastapi[standard]>=0.135.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "python-jose[cryptography]>=3.5.0",
    "python-socketio>=5.16.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pyright>=1.1.409",
    "types-passlib>=1.7.7.20260211",
    "types-python-jose>=3.5.0.20260408",
]

[tool.mypy]
python_version = "3.12"
pretty = true

[[tool.mypy.overrides]]
module = ["socketio"]
ignore_missing_imports = true
